# nlp-logix-challenges

./: FL_JACKSONVILLE_2020.csv  NEW_FL_JACKSONVILLE_2020.csv  README.md  challenge-1.py  challenge-2.py  challenge-3.py  metrics.txt  setup.cfg  setup.py
nlpchallengespackage/: challenge_1.py  challenge_2.py  challenge_3.py
nlpchallengespackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
