[metadata]
name = nlpchallengespackage
version = 0.0.1

[options]
packages = nlpchallengepackage
install_requires =
    requests
    importlib; python_version == "3.9"
[options.entry_points]
console_scripts =
    challenge-1 = nlpchallengespackage:challenge-1
    challenge-2 = nlpchallengespackage:challenge-2
    challenge-3 = nlpchallengespackage:challenge-3